# OpenGLTest

./: CMakeLists.txt  Terrain.cpp  Terrain.h  Vector.h  bmp.h  c.csv  definicje.cpp  interakcja.cpp  konfiguracja.cpp  main.cpp  model3DS.cpp  model3DS.h  rysowanie.cpp  sl.3ds  tekstura.cpp  tekstura.h  textureBMP.cpp  textureBMP.h  windowsVal.h
tekstury/: skilift5.3ds
